# homematch

./: .env.example  PROJECT.md  README.md  pyproject.toml
data/: listings.json
src/: demo.py
src/data_generation/: generate.py
src/personalization/: personalize.py
src/search/: search.py
src/vector_store/: store.py
