[tool.poetry]
name = "homematch"
version = "0.1.0"
description = "Personalized Real Estate Agent using LangChain and Vector Databases"
authors = ["Mike Myat Min Han <mmhan@indeed.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
# Core LangChain dependencies
langchain = "^0.3.10"
langchain-openai = "^0.3.10"
langchain-community = "^0.3.10"

# Vector Database
chromadb = "^0.5.1"

# LLM Providers
openai = "^1.84.0"

# Multimodal capabilities (CLIP)
transformers = "^4.52.4"
torch = "^2.7.1"
torchvision = "^0.22.1"
pillow = "^11.2.1"

# Data processing and utilities
pandas = "^2.3.0"
numpy = "^2.2.6"
python-dotenv = "^1.1.0"

# Jupyter notebook support
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

# Optional: Alternative vector databases
# lancedb = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88